<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- The Basics -->
    <parent>
        <groupId>org.orbisgis</groupId>
        <artifactId>orbisparent</artifactId>
        <version>1.0.3-SNAPSHOT</version>
    </parent>
    <artifactId>h2gis-parent</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>h2gis-api</module>
        <module>h2gis-utilities</module>
        <module>h2gis-test-utilities</module>
        <module>h2gis-functions</module>
        <module>h2gis-network</module>
        <module>h2gis-functions-osgi</module>
        <module>postgis-jts</module>
        <module>postgis-jts-osgi</module>
    </modules>

    <!-- Properties -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>YYYY-MM-dd</maven.build.timestamp.format>
        <buildNumber>${maven.build.timestamp}</buildNumber>
        <maven.compiler.target>8</maven.compiler.target>
        <maven.compiler.source>8</maven.compiler.source>
        <site.basedir>${project.basedir}</site.basedir>

        <!-- Dependency groupId and version -->
        <postgis-jdbc-groupId>net.postgis</postgis-jdbc-groupId>
        <postgis-jdbc-version>2.3.0</postgis-jdbc-version>
    </properties>

    <!-- Build Settings -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                        <manifestEntries>
                            <Specification-Vendor-URL>${project.organization.url}</Specification-Vendor-URL>
                            <Specification-URL>${project.url}</Specification-URL>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.gmavenplus</groupId>
                <artifactId>gmavenplus-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <!-- More Project Information -->
    <name>H2GIS</name>
    <description>H2GIS is a spatial extension of the H2 database engine in the spirit of PostGIS. It adds support for
        the Open Geospatial Consortium (OGC) Simple Features for SQL (SFSQL) functions.</description>
    <url>http://github.com/orbisgis/H2GIS</url>
    <licenses>
        <license>
            <name>GNU Lesser General Public License (LGPLV3+)</name>
            <url>http://www.gnu.org/licenses/lgpl-3.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <organization>
        <name>CNRS</name>
        <url>http://www.h2gis.org</url>
    </organization>
    <developers>
        <developer>
            <name>Nicolas Fortin</name>
            <organization>Laboratoire d’Acoustique Environnementale (LAE) - IFSTTAR</organization>
        </developer>
        <developer>
            <name>Erwan Bocher</name>
            <organization>CNRS, Lab-STICC UMR 6285</organization>
        </developer>
        <developer>
            <name>Sylvain Palominos</name>
            <organization>UBS, Lab-STICC UMR 6285</organization>
        </developer>
    </developers>

    <!-- Environment Settings -->
    <issueManagement>
        <system>Github</system>
        <url>https://github.com/orbisgis/H2GIS/issues</url>
    </issueManagement>
    <ciManagement>
        <system>Travis CI</system>
        <url>https://travis-ci.com/orbisgis/H2GIS</url>
    </ciManagement>
    <scm>
        <connection>scm:git:git://github.com/orbisgis/H2GIS</connection>
    </scm>

    <repositories>
        <repository>
            <id>orbisgis-release</id>
            <url>http://nexus-ng.orbisgis.org/repository/orbisgis-release</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
        <repository>
            <id>orbisgis-snapshot</id>
            <url>http://nexus-ng.orbisgis.org/repository/orbisgis-snapshot</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>

    <distributionManagement>
        <site>
            <id>orbisgis-devs-website</id>
            <name>Devs Website</name>
            <url>file:/var/www/html/${project.artifactId}</url>
        </site>
    </distributionManagement>

    <profiles>
        <profile>
            <id>standalone</id>
            <modules>
                <module>h2gis-dist</module>
            </modules>
        </profile>
    </profiles>
</project>
